--- a/app/account/templates/account/home.html
+++ b/app/account/templates/account/home.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>jj</h1>
-    <a href='{% url "social:begin" "github" %}' class="text-xl hover:text-gray-400">GitHub</a>
+    <h1>home</h1>
+    <!-- <a href='{% url "social:begin" "github" %}' class="text-xl hover:text-gray-400">GitHub</a> -->
+   <!-- <a href="https://oauth.vk.com/authorize?client_id={{ your_vk_client_id }}&scope=email&redirect_uri=http://localhost:8000/auth&response_type=code">Login with VK</a> -->
+
 </body>
 </html>
